Steps to Reproduce: 1. Open ImageMap Editor 2. Press 'Rectangle' 3. Press 'Ellipse' 4. Press 'Polygon' 5. Press 'Freeform Polygon' Windows 7 Pro x64 Version: 5.1.0.0.alpha1+ (x64) Build ID: 253c0f073715b1d0f6ba063b1182016e45951bf4 TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-06-24_21:31:12 Locale: ja-JP (ja_JP) Version: 5.0.0.2 (x64) Build ID: a26d58f11b99b6aeddf7f7884effea188cc6e512 Locale: ja-JP (ja_JP)
Created attachment 116918 [details] Screenshot
Repro in 4.4.4. Doesn't happen in 4.2.8.2. Win 7 Pro 64-bit, Version: 4.4.4.3 Build ID: 2c39ebcf046445232b798108aa8a7e7d89552ea8 Locale: fi_FI Ubuntu 15.04 64-bit Version: 4.4.4.3 Build ID: 40m0(Build:3) Locale: en_US.UTF-8 4.2.8.2
This began at the below commit. Adding Cc: to eszkadev@gmail.com; Could you possibly take a look at this one? Thanks commit 4bbf35572d94efe8b321e3159e9810f52bc3f9f8 Author: Szymon Kłos <eszkadev@gmail.com> Date: Mon Jul 7 11:24:48 2014 +0200 RID_SVXDLG_IMAP conversion to .ui Change-Id: I6d0ecb693177436a47d1115cdab6d5ec20254f4f Reviewed-on: https://gerrit.libreoffice.org/10105 Reviewed-by: Caolán McNamara <caolanm@redhat.com> Tested-by: Caolán McNamara <caolanm@redhat.com>
Szymon Kłos committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd3ca5b24eeebd5ab8e3b98c8e1b5edfd9127042 tdf#92411 : don't select all toolbar buttons in the ImageMap Editor It will be available in 5.1.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Migrating Whiteboard tags to Keywords: (bibisected) [NinjaEdit]