tdf#92411 : don't select all toolbar buttons in the ImageMap Editor

Change-Id: Id69a03b0379becc4c267a85eb7567bbbd41ccf82